--- a/style.css
+++ b/style.css
@@ -331,9 +331,8 @@ header {
 @media (min-width: 800px) {
   .services {
     display: flex;
-    max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 90%;
+    margin: auto;
   }
 
   .service + .services {
